--- a/force-app/test/default/classes/SummitEventsCancelReview_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsCancelReview_TEST.cls
@@ -8,12 +8,16 @@ private class SummitEventsCancelReview_TEST {
     @IsTest static void testRegCancel() {
         List<Summit_Events_Instance__c> seaTestInstances = SummitEventsTestSharedDataFactory.createTestEvent();
         Summit_Events_Registration__c testRegistration = SummitEventsTestSharedDataFactory.createEventRegistration(seaTestInstances[1], 'TestFirst', 'TestLast', 'test@valleyhill.net', '55418', '1971-03-22', '2012', null);
+        testRegistration.Status__c = 'Registered';
+        update testRegistration;
         User testUser = SummitEventsTestSharedDataFactory.userToRunWith('Standard User','Summit_Events_Registrant');
         System.runAs(testUser) {
             Test.startTest();
             PageReference pageRef = Page.SummitEventsCancelReview;
             Test.setCurrentPage(pageRef);
-            ApexPages.currentPage().getParameters().put('regId', testRegistration.Id);
+            SummitEventsShared SEAShared = new SummitEventsShared();
+            String encryptedRegistrationId = SEAShared.createEncryptedCookie('', seaTestInstances[1].Id, seaTestInstances[1].Event__c, testRegistration.Id);
+            ApexPages.currentPage().getParameters().put('eventInfo', encryptedRegistrationId);
             SummitEventsCancelReviewController cancelReviewCtrl = new SummitEventsCancelReviewController();
             cancelReviewCtrl.cancelRegistration();
 
@@ -23,6 +27,33 @@ private class SummitEventsCancelReview_TEST {
                     WHERE Id = :testRegistration.Id
             ];
             System.assertEquals(statusRegistration.Status__c, 'Cancelled');
+            Test.stopTest();
+        }
+    }
+
+    @IsTest static void testEncryptedRegistrationTamper() {
+        List<Summit_Events_Instance__c> seaTestInstances = SummitEventsTestSharedDataFactory.createTestEvent();
+        Summit_Events_Registration__c testRegistration = SummitEventsTestSharedDataFactory.createEventRegistration(seaTestInstances[1], 'TestFirst', 'TestLast', 'test@valleyhill.net', '55418', '1971-03-22', '2012', null);
+        testRegistration.Status__c = 'Registered';
+        update testRegistration;
+        User testUser = SummitEventsTestSharedDataFactory.userToRunWith('Standard User','Summit_Events_Registrant');
+        System.runAs(testUser) {
+            Test.startTest();
+            PageReference pageRef = Page.SummitEventsCancelReview;
+            Test.setCurrentPage(pageRef);
+            SummitEventsShared SEAShared = new SummitEventsShared();
+            String encryptedRegistrationId = SEAShared.createEncryptedCookie('', seaTestInstances[1].Id, seaTestInstances[1].Event__c, testRegistration.Id);
+            ApexPages.currentPage().getParameters().put('eventInfo', encryptedRegistrationId + 'TAMPER');
+            SummitEventsCancelReviewController cancelReviewCtrl = new SummitEventsCancelReviewController();
+            cancelReviewCtrl.cancelRegistration();
+
+            Summit_Events_Registration__c statusRegistration = [
+                    SELECT Id, Status__c
+                    FROM Summit_Events_Registration__c
+                    WHERE Id = :testRegistration.Id
+            ];
+            System.assertEquals(statusRegistration.Status__c, 'Registered');
+            System.assertEquals(cancelReviewCtrl.eventNotFound, TRUE);
             Test.stopTest();
         }
     }
