solidified the tooltip

--- a/force-app/main/default/classes/SummitEventsController.cls
+++ b/force-app/main/default/classes/SummitEventsController.cls
@@ -5,21 +5,19 @@
 public with sharing class SummitEventsController {
 
     public String feedURL { get; set; }
+    public String communityBaseURL { get; set; }
 
     public SummitEventsController() {
 
         Summit_Events_Settings__c myUserSetting = Summit_Events_Settings__c.getInstance(UserInfo.getUserId());
-        String communityBaseURL = myUserSetting.Community_Base_URL__c;
-
+        communityBaseURL = myUserSetting.Community_Base_URL__c;
         communityBaseURL = communityBaseURL.replaceAll('http:', 'https:');
+        if (communityBaseURL.endsWith('/')) {
+            communityBaseURL = communityBaseURL.removeEnd('/');
+        }
 
         String namespace = SummitEventsNamespace.getNamespace();
-
-        if (communityBaseURL.endsWith('/')) {
-            feedURL = communityBaseURL + 'services/apexrest/';
-        } else {
-            feedURL = communityBaseURL + '/services/apexrest/';
-        }
+        feedURL = communityBaseURL + '/services/apexrest/';
 
         if (String.isNotEmpty(namespace)) {
             feedURL += namespace + '/';
